chore: 页面排版框架搭建

--- a/antd.value.less
+++ b/antd.value.less
@@ -1,5 +1,5 @@
-@primary-color: #6190e8;
-@error-color: #e56839;
+@primary-color: #00B2B6;
+@error-color: #FF836B;
 @btn-font-weight: bold;
 @btn-primary-bg: #6190e8;
 @btn-default-color: #6190e8;
