feat: 添加页面header组件

--- a/src/components/table/index.module.scss
+++ b/src/components/table/index.module.scss
@@ -1,7 +1,7 @@
 .table-page {
     background: #fff;
     display: grid;
-    height: 100%;
+    height: calc(100% - 72px);
     padding: 0 20px;
     grid-template-rows: 1fr 60px;
 }
