--- a/src/styles/antd.reset.scss
+++ b/src/styles/antd.reset.scss
@@ -50,3 +50,20 @@
     border-radius: 8px !important;
   }
 }
+
+// button
+.ant-btn-icon-only {
+  background: #FFFFFF;
+  box-shadow: 0px 8px 12px rgba(0, 87, 89, 0.05) !important;
+  border-radius: 6px;
+  border: none !important;
+}
+
+.ant-btn-primary {
+  color: #fff;
+  background: #00B2B6 !important;
+  border-color: #00B2B6 !important;
+  text-shadow: 0 -1px 0 rgba(0, 87, 89, 0.12);
+  box-shadow: 0px 8px 12px rgba(0, 87, 89, 0.1) !important;
+  border-radius: 6px !important;
+}
