--- a/src/styles/antd.reset.scss
+++ b/src/styles/antd.reset.scss
@@ -96,3 +96,8 @@
 .ant-modal-close-icon {
   color: #fff !important;
 }
+
+// avatar
+.ant-avatar-image {
+  box-shadow: 1px 1px 16px 5px rgba(0, 87, 89, 0.1);
+}
