chore: add icons

--- a/antd.value.less
+++ b/antd.value.less
@@ -1,5 +1,5 @@
-@primary-color: #00B2B6;
-@error-color: #FF836B;
+@primary-color: #00b2b6;
+@error-color: #ff836b;
 @btn-font-weight: bold;
 @btn-primary-bg: #6190e8;
 @btn-default-color: #6190e8;
@@ -17,8 +17,8 @@
 @input-border-color: #dfe1e8;
 @input-hover-border-color: #6190e8;
 @table-row-hover-bg: #e6e9f1;
-@select-item-active-bg: #e6e9f1;
-@select-item-selected-bg: #e6e9f1;
+@select-item-active-bg: #00b2b6;
+@select-item-selected-bg: #00b2b6;
 @cascader-item-selected-bg: red;
 @table-bg: #fff;
 @table-header-bg: #fff;
