--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -59,3 +59,13 @@ select:-webkit-autofill:focus {
   outline: none;
   cursor: pointer;
 }
+
+.table-operation-group {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+
+  span[role='img'] {
+    font-size: 16px;
+  }
+}
