chore(order): change order style (#13)
* chore: add icons

* chore: add order type

* chore: order modal style

* chore: order modal style

* chore: flexible input

--- a/antd.value.less
+++ b/antd.value.less
@@ -1,25 +1,24 @@
-@primary-color: #00B2B6;
-@error-color: #FF836B;
-@btn-font-weight: bold;
-@btn-primary-bg: #6190e8;
-@btn-default-color: #6190e8;
+@primary-color: #00b2b6;
+@error-color: #ff836b;
+@btn-primary-bg: #00b2b6;
+@btn-default-color: #657683;
 @btn-default-bg: #fff;
-@btn-default-border: #6190e8;
-@btn-default-ghost-border: #6190e8;
-@btn-default-ghost-color: #6190e8;
+@btn-default-border: #657683;
+@btn-default-ghost-border: #657683;
+@btn-default-ghost-color: #657683;
 @menu-bg: #fff;
 @menu-item-active-bg: #f4f5f9;
 @menu-item-color: #222;
 @menu-inline-toplevel-item-height: 48px;
 @menu-highlight-color: #3c61c6;
-@input-placeholder-color: #999;
-@input-color: #222;
-@input-border-color: #dfe1e8;
-@input-hover-border-color: #6190e8;
+@input-placeholder-color: #b0b7bd;
+@input-color: #123046;
+@input-border-color: #00b2b6;
+@input-hover-border-color: #00b2b6;
 @table-row-hover-bg: #e6e9f1;
-@select-item-active-bg: #e6e9f1;
-@select-item-selected-bg: #e6e9f1;
-@cascader-item-selected-bg: red;
+@select-item-active-bg: #00b2b6;
+@select-item-selected-bg: #00b2b6;
+@cascader-item-selected-bg: #00b2b6;
 @table-bg: #fff;
 @table-header-bg: #fff;
 @table-header-color: #333;
@@ -28,3 +27,4 @@
 @tooltip-bg: #f4f5f9;
 @tooltip-color: #222;
 @box-shadow-base: 0;
+@border-radius-base: 6px;
