chore(order): add history modal

--- a/src/styles/antd.reset.scss
+++ b/src/styles/antd.reset.scss
@@ -75,7 +75,7 @@
   border-radius: 8px !important;
 }
 .ant-modal-header {
-  padding: 16px 24px;
+  padding: 24px 16px !important;
   color: #fff !important;
   background: #00b2b6 !important;
   border-bottom: 0px !important;
