--- a/antd.value.less
+++ b/antd.value.less
@@ -24,7 +24,7 @@
 @table-header-color: #333;
 @table-padding-vertical: 17px;
 @table-selected-row-bg: #e6e9f1;
-@tooltip-bg: #f4f5f9;
-@tooltip-color: #222;
+@tooltip-bg: rgba(18, 48, 70, 0.8);
+@tooltip-color: #fff;
 @box-shadow-base: 0;
 @border-radius-base: 6px;
