--- a/src/pages/material/layout/modal/index.module.scss
+++ b/src/pages/material/layout/modal/index.module.scss
@@ -5,3 +5,24 @@
 .btns {
   margin-left: 32px;
 }
+.remake {
+  margin-left: 32px;
+  .content {
+    background: #f3fbfb;
+    border-radius: 6px;
+    width: 480px;
+    padding: 12px;
+    margin: 16px 0;
+  }
+  .picture-box {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    .picture {
+      width: 230px;
+      height: 180px;
+      background: #f3fbfb;
+      margin: 0 16px 16px 0;
+    }
+  }
+}
