feat: 添加原材料管理

--- a/src/styles/antd.reset.scss
+++ b/src/styles/antd.reset.scss
@@ -52,10 +52,15 @@
 }
 
 // button
+
 .ant-btn-lg {
   min-width: 136px;
   height: 40px;
   border-radius: 6px !important;
+}
+.ant-btn-default {
+  color: #657683 !important;
+  border-color: #657683 !important;
 }
 
 .ant-btn-primary {
@@ -99,4 +104,37 @@
 // avatar
 .ant-avatar-image {
   box-shadow: 1px 1px 16px 5px rgba(0, 87, 89, 0.1);
+}
+
+//breadcrumb
+.ant-breadcrumb {
+  font-size: 20px !important;
+}
+
+//table
+.ant-spin-nested-loading,
+.ant-spin-container,
+.ant-table-container,
+.ant-table,
+.ant-table-empty,
+.ant-table-content,
+.ant-table table {
+  height: 100%;
+}
+
+//input
+.ant-input {
+  border-color: #00b2b6 !important;
+  border-radius: 6px !important;
+}
+
+//select
+.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
+  border-color: #00b2b6 !important;
+}
+//upload
+.ant-upload.ant-upload-select-picture-card {
+  background: #f3fbfb !important;
+  border-radius: 6px !important;
+  border: none !important;
 }
