--- a/src/components/table/index.module.scss
+++ b/src/components/table/index.module.scss
@@ -1,9 +1,13 @@
 .table-page {
   background: #fff;
   display: grid;
-  height: calc(100% - 72px);
+
   padding: 0 20px;
   grid-template-rows: 1fr 110px;
+}
+
+.table-with-pagination {
+  height: calc(100% - 72px);
 }
 
 .pagination {
