--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -55,7 +55,7 @@ select:-webkit-autofill:focus {
 }
 
 .action-pointer {
-  color: #6190e8;
+  color: #00b2b6 !important;
   outline: none;
   cursor: pointer;
 }
