feat: 商品分类管理页面

--- a/src/styles/antd.reset.scss
+++ b/src/styles/antd.reset.scss
@@ -58,6 +58,7 @@
   height: 40px;
   border-radius: 6px !important;
 }
+
 .ant-btn-default {
   color: #657683 !important;
   border-color: #657683 !important;
@@ -76,9 +77,11 @@
 .ant-modal {
   min-width: 840px;
 }
+
 .ant-modal-content {
   border-radius: 8px !important;
 }
+
 .ant-modal-header {
   padding: 24px 16px !important;
   color: #fff !important;
@@ -86,6 +89,7 @@
   border-bottom: 0px !important;
   border-radius: 8px 8px 0 0 !important;
 }
+
 .ant-modal-body {
   padding: 24px 16px 16px !important;
   background: #f3fbfb !important;
@@ -93,10 +97,12 @@
 
 .ant-modal-close {
   color: #fff !important;
+
   &:hover {
     color: #ff836b !important;
   }
 }
+
 .ant-modal-title {
   color: #fff !important;
 }
@@ -139,9 +145,15 @@
 .ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
   border-color: #00b2b6 !important;
 }
+
 //upload
 .ant-upload.ant-upload-select-picture-card {
   background: #f3fbfb !important;
   border-radius: 6px !important;
   border: none !important;
+}
+
+//modal
+.ant-modal {
+  min-width: 400px !important;
 }
