--- a/src/pages/goods/layout/layout.module.scss
+++ b/src/pages/goods/layout/layout.module.scss
@@ -43,4 +43,12 @@
 .btns {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  gap: 16px;
+  :global {
+    .ant-btn-text {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
 }
