--- a/src/pages/goods/layout/layout.module.scss
+++ b/src/pages/goods/layout/layout.module.scss
@@ -1,6 +1,6 @@
 .tablebox {
   height: 100%;
-  padding: 32px 32px 0 32px;
+  padding: 0 32px;
   background-color: #fff;
   :global {
     .ant-table-wrapper {
