--- a/src/pages/goods/index.module.scss
+++ b/src/pages/goods/index.module.scss
@@ -7,6 +7,12 @@
 }
 
 .table {
-  padding: 0 32px;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  padding: 0 32px 32px 32px;
   background-color: #fff;
+}
+
+.table-items {
+  overflow-y: scroll;
 }
