chore(goods): add goods api (#30)
* chore(goods): update create modal

* chore(goods): refactor table view

* chore(goods): goods order api

* chore(goods): goods order api

--- a/src/pages/goods/index.module.scss
+++ b/src/pages/goods/index.module.scss
@@ -5,3 +5,14 @@
   display: grid;
   grid-template-rows: auto 1fr;
 }
+
+.table {
+  display: grid;
+  grid-template-rows: 1fr auto;
+  padding: 0 32px 32px 32px;
+  background-color: #fff;
+}
+
+.table-items {
+  overflow-y: scroll;
+}
