fix: 表格时间格式优化

--- a/src/pages/goods/index.module.scss
+++ b/src/pages/goods/index.module.scss
@@ -1,7 +1,6 @@
 .goods {
   height: 100%;
   min-height: 100%;
-  overflow-y: scroll;
   display: grid;
   grid-template-rows: auto 1fr;
 }
@@ -11,8 +10,5 @@
   grid-template-rows: 1fr auto;
   padding: 0 32px 32px 32px;
   background-color: #fff;
-}
-
-.table-items {
-  overflow-y: scroll;
+  overflow: auto;
 }
