--- a/src/layout/order-material/table/index.module.scss
+++ b/src/layout/order-material/table/index.module.scss
@@ -60,8 +60,8 @@
 }
 
 .opt-btns {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 40px 24px;
 
   :global {
     .ant-btn-text {
