--- a/src/pages/login/index.module.scss
+++ b/src/pages/login/index.module.scss
@@ -43,7 +43,7 @@
   flex-direction: column;
   align-items: flex-start;
   flex-grow: 1;
-  background: url('/images/login-pic.svg');
+  background: url('/images/login-pic.png');
   background-size: cover;
 }
 
