chore(logo): add logo link

--- a/src/layout/layout/sider/index.module.scss
+++ b/src/layout/layout/sider/index.module.scss
@@ -7,6 +7,10 @@
   padding: 18px 32px;
   background-color: #fff;
   box-sizing: border-box;
+  a {
+    display: grid;
+    place-items: center;
+  }
 }
 
 .menu {
