--- a/src/layout/order-material-history/modal/index.module.scss
+++ b/src/layout/order-material-history/modal/index.module.scss
@@ -23,12 +23,24 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-
+    .picture-content {
+      position: relative;
+      .download {
+        position: absolute;
+        right: 30px;
+        top: 10px;
+      }
+    }
     .picture {
       width: 230px;
       height: 180px;
-      background: #f3fbfb;
+      border: 1px solid #daeced;
+      border-radius: 6px;
       margin: 0 16px 16px 0;
+      display: grid;
+      grid-row-gap: 16px;
+      align-content: center;
+      justify-items: center;
     }
   }
 }
